feat: added player component

--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -170,7 +170,11 @@
                     },
                     {
                         "type": "Free Camera Controller"
+                    },
+                    {
+                        "type": "Player"
                     }
+                    
                 ],
                 "children": [
                     {
