--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -302,9 +302,10 @@
         ]
       },
       {
-        "position": [0, 1, 0],
+        "position": [0, -1, 0],
         "rotation": [0, 0, 0],
         "scale": [0.3, 0.3, 0.3],
+        "name": "Player",
         "components": [
           {
             "type": "Mesh Renderer",
@@ -315,12 +316,14 @@
             "type": "Player"
           },
           {
-            "type": "Free Camera Controller"
+            "type": "Player Movement Controller",
+            "speedupFactor": 7.0,
+            "maxHorizontalDistance": 4.0
           },
           {
             "type": "Movement",
-            "angularVelocity": [-300, 0, 0],
-            "linearVelocity": [0, 0, -3.0]
+            "angularVelocity": [-500, 0, 0],
+            "linearVelocity": [0, 0, -5.0]
           }
         ]
       },
@@ -334,7 +337,7 @@
           {
             "type": "Movement",
             "angularVelocity": [0, 0, 0],
-            "linearVelocity": [0, 0, -3.0]
+            "linearVelocity": [0, 0, -5.0]
           }
         ]
       },
