--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -22,6 +22,10 @@
         "textured": {
           "vs": "assets/shaders/textured.vert",
           "fs": "assets/shaders/textured.frag"
+        },
+        "light": {
+          "vs": "assets/shaders/light.vert",
+          "fs": "assets/shaders/light.frag"
         }
       },
       "textures": {
@@ -31,7 +35,12 @@
         "glass": "assets/textures/glass-panels.png",
         "monkey": "assets/textures/monkey.png",
         "coin": "assets/textures/coin.png",
-        "gem_heart": "assets/textures/gem_heart.png"
+        "gem_heart": "assets/textures/gem_heart.png",
+        "albedo": "assets/textures/albedo.jpg",
+        "emissive": "assets/textures/emissive.jpg",
+        "roughness": "assets/textures/roughness.jpg",
+        "specular": "assets/textures/specular.jpg",
+        "ambient_occlusion": "assets/textures/ambient_occlusion.jpg"
       },
       "meshes": {
         "cube": "assets/models/cube.obj",
@@ -114,23 +123,46 @@
           "sampler": "default"
         },
         "moon": {
-          "type": "textured",
+          // "type": "textured",
+          // "shader": "textured",
+          // "pipelineState": {
+          //   "faceCulling": {
+          //     "enabled": false
+          //   },
+          //   "depthTesting": {
+          //     "enabled": true
+          //   }
+          // },
+          // "tint": [1, 1, 1, 1],
+          // "texture": "moon",
+          // "sampler": "default"
+          "type": "lighted", // in the materials.hpp file
           "shader": "textured",
           "pipelineState": {
-            "faceCulling": {
-              "enabled": false
-            },
-            "depthTesting": {
-              "enabled": true
-            }
+              "faceCulling": {
+                  "enabled": false
+              },
+              "depthTesting": {
+                  "enabled": true
+              }
           },
-          "tint": [1, 1, 1, 1],
-          "texture": "moon",
-          "sampler": "default"
+          "tint": [
+              1,
+              1,
+              1,
+              1
+          ],
+          "texture":"moon",
+          "sampler": "default",
+          "albedo": "albedo",
+          "emissive": "emissive",
+          "roughness": "roughness",
+          "specular": "specular",
+          "ambient_occlusion": "ambient_occlusion"
         },
         "coin": {
           "type": "textured",
-          "shader": "textured",
+          "shader": "light",
           "pipelineState": {
             "faceCulling": {
               "enabled": false
@@ -186,8 +218,70 @@
                 "material": "metal"
               }
             ]
+          },
+          {
+            "type": "Light",
+            "typeLight": "spot",
+            "enabled": true,
+            "direction": [
+                0,
+                -1,
+                0
+            ],
+            "position": [
+                0,
+                0,
+                1
+            ],
+            "diffuse": [
+                0,
+                0,
+                10.0
+            ],
+            "specular": [
+                0,
+                0,
+                10.0
+            ],
+            "attenuation": {
+                "quadratic": 0.0,
+                "linear": 0.0,
+                "constant": 1.0
+            },
+            "spot_angle": {
+                "inner": 0.0,
+                "outer": 0.5
+            }
           }
         ]
+      },
+      // Sky Light
+      {
+          "name": "sky_light",
+          "components": [
+              {
+                  "type": "Light",
+                  "typeLight": "sky",
+                  "enabled": true,
+                  "sky_light": {
+                      "top_color": [
+                          5,
+                          0,
+                          0
+                      ],
+                      "middle_color": [
+                          2.5,
+                          0,
+                          2.5
+                      ],
+                      "bottom_color": [
+                          0,
+                          0,
+                          5
+                      ]
+                  }
+              }
+          ]
       },
       {
         "rotation": [-45, 0, 0],
