--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -266,8 +266,8 @@
           "sampler": "default"
         },
         "coin": {
-          "type": "lighted",
-          "shader": "light",
+          "type": "textured",
+          "shader": "textured",
           "pipelineState": {
             "faceCulling": {
               "enabled": false
@@ -328,22 +328,28 @@
                 "material": "metal"
               }
             ]
-          }
-        ]
-      },
-      {
-        "name": "directional_light",
-        "components": [
+          },
           {
             "type": "Light",
-            "typeLight": "directional",
+            "typeLight": "spot",
             "enabled": true,
             "direction": [0, -1, 0],
+            "position": [0, 0, 1],
             "diffuse": [0, 0, 10.0],
-            "specular": [0, 0, 10.0]          
+            "specular": [0, 0, 10.0],
+            "attenuation": {
+              "quadratic": 0.0,
+              "linear": 0.0,
+              "constant": 1.0
+            },
+            "spot_angle": {
+              "inner": 0.0,
+              "outer": 0.5
+            }
           }
         ]
       },
+      // Sky Light
       {
         "name": "sky_light",
         "components": [
@@ -352,9 +358,9 @@
             "typeLight": "sky",
             "enabled": true,
             "sky_light": {
-              "top_color": [0, -1, 0],
-              "bottom_color": [0, 0, 10.0],
-              "middle_color": [0, 0, 10.0]
+              "top_color": [5, 0, 0],
+              "middle_color": [2.5, 0, 2.5],
+              "bottom_color": [0, 0, 5]
             }
           }
         ]
