--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -76,9 +76,9 @@
       // generated heart
       "heart": {
         "name": "Heart",
-        "position": [0, -0.5, 0],
+        "position": [0, 0, 0],
         "rotation": [0, 0, 0],
-        "scale": [0.01, 0.01, 0.01],
+        "scale": [0.02, 0.02, 0.02],
         "components": [
           {
             "type": "Mesh Renderer",
@@ -251,8 +251,8 @@
           "sampler": "default"
         },
         "ball": {
-          "type": "textured",
-          "shader": "textured",
+          "type": "lighted",
+          "shader": "light",
           "pipelineState": {
             "faceCulling": {
               "enabled": false
@@ -266,8 +266,8 @@
           "sampler": "default"
         },
         "coin": {
-          "type": "textured",
-          "shader": "textured",
+          "type": "lighted",
+          "shader": "light",
           "pipelineState": {
             "faceCulling": {
               "enabled": false
@@ -281,8 +281,8 @@
           "sampler": "default"
         },
         "rock": {
-          "type": "textured",
-          "shader": "textured",
+          "type": "lighted",
+          "shader": "light",
           "pipelineState": {
             "faceCulling": {
               "enabled": false
@@ -328,28 +328,20 @@
                 "material": "metal"
               }
             ]
-          },
-          {
-            "type": "Light",
-            "typeLight": "spot",
-            "enabled": true,
-            "direction": [0, -1, 0],
-            "position": [0, 0, 1],
-            "diffuse": [0, 0, 10.0],
-            "specular": [0, 0, 10.0],
-            "attenuation": {
-              "quadratic": 0.0,
-              "linear": 0.0,
-              "constant": 1.0
-            },
-            "spot_angle": {
-              "inner": 0.0,
-              "outer": 0.5
-            }
           }
         ]
       },
-      // Sky Light
+      {
+        "name": "directional_light",
+        "components": [
+          {
+            "type": "Light",
+            "typeLight": "directional",
+            "enabled": true,
+            "direction": [-1, -1, 0]         
+          }
+        ]
+      },
       {
         "name": "sky_light",
         "components": [
@@ -358,9 +350,9 @@
             "typeLight": "sky",
             "enabled": true,
             "sky_light": {
-              "top_color": [5, 0, 0],
-              "middle_color": [2.5, 0, 2.5],
-              "bottom_color": [0, 0, 5]
+              "top_color": [0, -1, 0],
+              "bottom_color": [0, 0, 10.0],
+              "middle_color": [0, 0, 10.0]
             }
           }
         ]
