--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -22,6 +22,21 @@
       "coinChance": 0.7,
       "obstacleChance": 0.25,
       "heartChance": 0.05,
+      // generated ground
+      "groundLength": 100,
+      "ground": {
+        "position": [0, -2, 0],
+        "rotation": [0, 0, 0],
+        "scale": [6, 1, 100],
+        "components": [
+          {
+            "type": "Mesh Renderer",
+            "mesh": "cube",
+            "material": "asphalt",
+            "sampler": "repeated"
+          }
+        ]
+      },
       // generated coin
       "coin": {
         "name": "Coin",
@@ -37,7 +52,7 @@
           {
             "type": "Movement",
             "angularVelocity": [0, 100, 0],
-            "linearVelocity": [0, 0, 0.5]
+            "linearVelocity": [0, 0, 0]
           },
           {
             "type": "CoinTag"
@@ -88,7 +103,7 @@
           {
             "type": "Movement",
             "angularVelocity": [0, 100, 0],
-            "linearVelocity": [0.15, 0, 0.5]
+            "linearVelocity": [0, 0, 0]
           },
           {
             "type": "HeartTag"
@@ -119,6 +134,12 @@
         "light": {
           "vs": "assets/shaders/light.vert",
           "fs": "assets/shaders/light.frag"
+        },
+        // repeats the texture based on world position
+        // useful for plane and cube meshes that stretch the texture
+        "light_repeated": {
+          "vs": "assets/shaders/light_repeated.vert",
+          "fs": "assets/shaders/light.frag"
         }
       },
       "textures": {
@@ -128,25 +149,27 @@
         "wood": "assets/textures/wood.jpg",
         "glass": "assets/textures/glass-panels.png",
         "monkey": "assets/textures/monkey.png",
+        "monkey_ambient_occlusion": "assets/textures/materials/monkey/ambient_occlusion.jpg",
+        "asphalt_albedo": "assets/textures/materials/asphalt/albedo.jpg",
+        "asphalt_roughness": "assets/textures/materials/asphalt/roughness.jpg",
+        "metal_albedo": "assets/textures/materials/metal/albedo.jpg",
+        "metal_specular": "assets/textures/materials/metal/specular.jpg",
+        "metal_roughness": "assets/textures/materials/metal/roughness.jpg",
+        "gold_albedo": "assets/textures/materials/gold/albedo.png",
+        "gold_specular": "assets/textures/materials/gold/specular.png",
+        "gold_roughness": "assets/textures/materials/gold/roughness.png",
         "coin": "assets/textures/coin.png",
+        "coin_ambient_occlusion": "assets/textures/materials/coin/ambient_occlusion.png",
         "rock": "assets/textures/rock.png",
         "pepsiman": "assets/textures/Pepsiman.png",
         "gem_heart": "assets/textures/gem_heart.png",
-        "num_0": "assets/textures/numbers/0.png",
-        "num_1": "assets/textures/numbers/1.png",
-        "num_2": "assets/textures/numbers/2.png",
-        "num_3": "assets/textures/numbers/3.png",
-        "num_4": "assets/textures/numbers/4.png",
-        "num_5": "assets/textures/numbers/5.png",
-        "num_6": "assets/textures/numbers/6.png",
-        "num_7": "assets/textures/numbers/7.png",
-        "num_8": "assets/textures/numbers/8.png",
-        "num_9": "assets/textures/numbers/9.png",
+        "gem_heart_ambient_occlusion": "assets/textures/materials/gem_heart/ambient_occlusion.png",
         "albedo": "assets/textures/albedo.jpg",
         "emissive": "assets/textures/emissive.jpg",
         "roughness": "assets/textures/roughness.jpg",
         "specular": "assets/textures/specular.jpg",
-        "ambient_occlusion": "assets/textures/ambient_occlusion.jpg"
+        "white": "assets/textures/white.png",
+        "black": "assets/textures/black.png"
       },
       "meshes": {
         "cube": "assets/models/cube.obj",
@@ -170,19 +193,6 @@
         }
       },
       "materials": {
-        "metal": {
-          "type": "tinted",
-          "shader": "tinted",
-          "pipelineState": {
-            "faceCulling": {
-              "enabled": false
-            },
-            "depthTesting": {
-              "enabled": true
-            }
-          },
-          "tint": [0.45, 0.4, 0.5, 1]
-        },
         "glass": {
           "type": "textured",
           "shader": "textured",
@@ -206,8 +216,8 @@
           "sampler": "pixelated"
         },
         "grass": {
-          "type": "textured",
-          "shader": "textured",
+          "type": "lit",
+          "shader": "light",
           "pipelineState": {
             "faceCulling": {
               "enabled": false
@@ -220,9 +230,9 @@
           "texture": "grass",
           "sampler": "repeated"
         },
-        "monkey": {
-          "type": "textured",
-          "shader": "textured",
+        "asphalt": {
+          "type": "lit",
+          "shader": "light_repeated",
           "pipelineState": {
             "faceCulling": {
               "enabled": false
@@ -232,12 +242,31 @@
             }
           },
           "tint": [1, 1, 1, 1],
-          "texture": "monkey",
+          "albedo": "asphalt_albedo",
+          "roughness": "asphalt_roughness",
+          "sampler": "repeated"
+        },
+        "monkey": {
+          "type": "lit",
+          "shader": "light",
+          "pipelineState": {
+            "faceCulling": {
+              "enabled": false
+            },
+            "depthTesting": {
+              "enabled": true
+            }
+          },
+          "tint": [1, 1, 1, 1],
+          "albedo": "metal_albedo",
+          "specular": "metal_specular",
+          "roughness": "metal_roughness",
+          "ambient_occlusion": "monkey_ambient_occlusion",
           "sampler": "default"
         },
         "moon": {
-          "type": "textured",
-          "shader": "textured",
+          "type": "lit",
+          "shader": "light",
           "pipelineState": {
             "faceCulling": {
               "enabled": false
@@ -251,7 +280,7 @@
           "sampler": "default"
         },
         "ball": {
-          "type": "lighted",
+          "type": "lit",
           "shader": "light",
           "pipelineState": {
             "faceCulling": {
@@ -262,11 +291,13 @@
             }
           },
           "tint": [1, 1, 1, 1],
-          "texture": "ball",
+          "albedo": "ball",
+          "specular": "asphalt_specular",
+          "roughness": "asphalt_roughness",
           "sampler": "default"
         },
         "coin": {
-          "type": "lighted",
+          "type": "lit",
           "shader": "light",
           "pipelineState": {
             "faceCulling": {
@@ -278,10 +309,14 @@
           },
           "tint": [1, 1, 1, 1],
           "texture": "coin",
-          "sampler": "default"
+          "sampler": "default",
+          "albedo": "coin",
+          "specular": "metal_specular",
+          "roughness": "metal_roughness",
+          "ambient_occlusion": "coin_ambient_occlusion"
         },
         "rock": {
-          "type": "lighted",
+          "type": "lit",
           "shader": "light",
           "pipelineState": {
             "faceCulling": {
@@ -292,12 +327,12 @@
             }
           },
           "tint": [1, 1, 1, 1],
-          "texture": "rock",
+          "albedo": "rock",
           "sampler": "default"
         },
         "gem_heart": {
-          "type": "textured",
-          "shader": "textured",
+          "type": "lit",
+          "shader": "light",
           "pipelineState": {
             "faceCulling": {
               "enabled": false
@@ -307,30 +342,13 @@
             }
           },
           "tint": [1, 1, 1, 1],
-          "texture": "gem_heart",
+          "albedo": "gem_heart",
+          "ambient_occlusion": "gem_heart_ambient_occlusion",
           "sampler": "default"
         }
       }
     },
     "world": [
-      {
-        "position": [0, 0, 10],
-        "components": [],
-        "children": [
-          {
-            "position": [1, -1, -1],
-            "rotation": [45, 45, 0],
-            "scale": [0.1, 0.1, 1.0],
-            "components": [
-              {
-                "type": "Mesh Renderer",
-                "mesh": "cube",
-                "material": "metal"
-              }
-            ]
-          }
-        ]
-      },
       {
         "name": "directional_light",
         "components": [
@@ -338,7 +356,19 @@
             "type": "Light",
             "typeLight": "directional",
             "enabled": true,
-            "direction": [-1, -1, 0]         
+            "direction": [-1, -1, 0],
+            "color": [0.1, 0.1, 0.1]
+          }
+        ]
+      },
+      {
+        "components": [
+          {
+            "type": "Light",
+            "typeLight": "directional",
+            "enabled": true,
+            "direction": [-0.25, 1, 0],
+            "color": [0.1, 0.1, 0.1]
           }
         ]
       },
@@ -372,83 +402,23 @@
           }
         ]
       },
-      {
-        "position": [0, -1, 0],
-        "rotation": [-90, 0, 0],
-        "scale": [10, 10000, 1],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "grass",
-            "sampler": {}
-          }
-        ]
-      },
-      {
-        "position": [0, 1, 2],
-        "rotation": [0, 0, 0],
-        "scale": [2, 2, 2],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "glass"
-          }
-        ]
-      },
-      {
-        "position": [0, 1, -2],
-        "rotation": [0, 0, 0],
-        "scale": [2, 2, 2],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "glass"
-          }
-        ]
-      },
-      {
-        "position": [2, 1, 0],
-        "rotation": [0, 90, 0],
-        "scale": [2, 2, 2],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "glass"
-          }
-        ]
-      },
-      {
-        "position": [-2, 1, 0],
-        "rotation": [0, 90, 0],
-        "scale": [2, 2, 2],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "glass"
-          }
-        ]
-      },
-      {
-        "position": [0, 3, 0],
-        "rotation": [90, 0, 0],
-        "scale": [2, 2, 2],
-        "components": [
-          {
-            "type": "Mesh Renderer",
-            "mesh": "plane",
-            "material": "glass"
-          }
-        ]
-      },
+      // {
+      //   "position": [0, -2, 0],
+      //   "rotation": [0, 0, 0],
+      //   "scale": [10, 1, 100],
+      //   "components": [
+      //     {
+      //       "type": "Mesh Renderer",
+      //       "mesh": "cube",
+      //       "material": "asphalt",
+      //       "sampler": "repeated"
+      //     }
+      //   ]
+      // },
       {
         "position": [0, 10, 0],
         "rotation": [45, 45, 0],
-        "scale": [5, 5, 5],
+        "scale": [0.05, 0.05, 0.05],
         "components": [
           {
             "type": "Mesh Renderer",
@@ -495,7 +465,7 @@
           {
             "type": "Player Movement Controller",
             "speedupFactor": 50.0,
-            "maxHorizontalDistance": 4.0,
+            "maxHorizontalDistance": 3.5,
             "jumpSpeed": 7.5
           },
           {
@@ -512,6 +482,9 @@
           {
             "type": "Camera"
           },
+          // {
+          //   "type": "Free Camera Controller"
+          // },
           {
             "type": "Movement",
             "angularVelocity": [0, 0, 0],
