feat: multi postprocess

--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -119,7 +119,10 @@
     },
     "renderer": {
       "sky": "assets/textures/sky.jpg",
-      "postprocess": "assets/shaders/postprocess/fog.frag"
+      "postprocess": [
+        "assets/shaders/postprocess/fog.frag"
+        // "assets/shaders/postprocess/hit.frag"
+      ]
     },
     "assets": {
       "shaders": {
