feat: post processing loading and using

--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -119,11 +119,12 @@
     },
     "renderer": {
       "sky": "assets/textures/sky.jpg",
-      "postprocess": [
+      "postprocess_load": [
         "assets/shaders/postprocess/hit.frag",
         "assets/shaders/postprocess/fog.frag",
         "assets/shaders/postprocess/radial-blur.frag"
-      ]
+      ],
+      "postprocess_permanent": []
     },
     "assets": {
       "shaders": {
