--- a/config/app.jsonc
+++ b/config/app.jsonc
@@ -71,7 +71,8 @@
         "name": "Obstacle",
         "position": [0, -0.5, 0],
         "rotation": [0, 0, 0],
-        "scale": [1, 1, 1],
+        "scale": [0.1, 0.1, 0.1],
+
         "components": [
           {
             "type": "Mesh Renderer",
@@ -520,7 +521,7 @@
             "type": "Movement",
             "angularVelocity": [-500, 0, 0],
             "linearVelocity": [0, 0, -5.0]
-          }
+          },
           // {
           //   "type": "Light",
           //   "typeLight": "point",
@@ -531,21 +532,21 @@
           //     "quadratic": 0.5
           //   }
           // }
-          // {
-          //   "type": "Light",
-          //   "typeLight": "spot",
-          //   "color": [1.0, 1.0, 1.0],
-          //   "attenuation": {
-          //     "constant": 1.0,
-          //     "linear": 0.0,
-          //     "quadratic": 0.0
-          //   },
-          //   "direction": [0, 0, -1],
-          //   "spot_angle": {
-          //     "inner": 20,
-          //     "outer": 50
-          //   }
-          // }
+          {
+            "type": "Light",
+            "typeLight": "spot",
+            "color": [1.0, 0.5, 1.0],
+            "attenuation": {
+              "constant": 1.0,
+              "linear": 0.0,
+              "quadratic": 0.0
+            },
+            "direction": [0, 0, -1],
+            "spot_angle": {
+              "inner": 20,
+              "outer": 50
+            }
+          }
         ]
       },
       {
